--- a/html/P2.html
+++ b/html/P2.html
@@ -28,7 +28,7 @@
     <div class="col-md-3 bg-secondary"><a href="P2.html">Aisles</a> </div>
     <div class="col-md-3 bg-secondary"><a href=".html">Shopping Cart</a> </div>
     <div class="col-md-3 bg-secondary"><a href="signup.html"> Sign Up</a> </div>
-  
+    <div class="col-md-3 bg-secondary"><a href="../templates/UserList.html"> User List</a> </div>
 </div>
 </header>
 <div class="aisles">
