--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <h2><a href="P1.html">Online Grocery Store</a> </h2>
+      </div>
     <div class="loginbox">
     <img src="avatar.png" class="avatar">
         <h1>Login Here</h1>
