--- a/html/signup.html
+++ b/html/signup.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" type="text/css"href="./style.css">
 </head>
 <body>
+    <div class="header">
+        <h2><a href="P1.html">Online Grocery Store</a> </h2>
+      </div>
     <div class="signup-form">
         <img src="pic1.png" class="icon">
         <h1>Sign Up Form</h1>
